# swagger/rememorySwagger.yaml
@@ -512,3 +512,281 @@ paths:
             isSuccess: false
             code: COMMON001
             message: "Bad Request"
+
+# Rcapsule Part
+
+# [POST] rcapsule 생성 api
+  /rcapsule/create:
+    post:
+      tags:
+        - Rcapsule
+      summary: "롤링페이퍼 생성"
+      parameters:
+        - in: query
+          name: userId
+          description: 스웨거 테스트용 user ID 입력칸
+          schema:
+            type: int
+            example: 1
+        - in: body
+          name: create
+          required: true
+          schema:
+            type: object
+            properties:
+              rcapsule_name:
+                type: string
+                description: rcapsule 이름
+                example: "롤링페이퍼 캡슐 1"
+              open_date:
+                type: string
+                description: rcapsule 여는 날짜
+                format: date
+                example: "2024-02-29"
+              dear_name:
+                type: string
+                description: 받는 사람 이름
+                example: "김고은"
+      responses:
+        '200':
+          description: Rcapsule 작성 성공
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  isSuccess:
+                    type: boolean
+                    example: true
+                  code:
+                    type: integer
+                    example: 2000
+                  message:
+                    type: string
+                    example: "success!"
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 400
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: integer
+                    example: COMMON001
+                  message:
+                    type: string
+                    example: "Bad Request"
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status: integer
+                  example: 500
+                isSuccess:
+                  type: boolean
+                  example: false
+                code:
+                  type: integer
+                  example: COMMON000
+                message:
+                  type: string
+                  example: "Internal Server Error. 관리자에게 문의하세요."
+                  
+  /rcapsule/{rcapsule_id}:
+    patch:
+      tags:
+        - Rcapsule
+      summary: 롤링페이퍼 비밀번호 설정하기
+      parameters:
+        - in: path
+          name: rcapsule_id
+          required: true
+          description: 비밀번호를 설정할 캡슐의 고유번호
+          schema:
+            type: string
+            example: "WIT_202450"
+        - in: body
+          name: password
+          required: true
+          schema:
+            type: object
+            properties:
+              rcapsule_password:
+                type: string
+                description: rcapsule 비밀번호(ex. 숫자 6글자)
+                example: "298304"
+      responses:
+        '200':
+          description: 비밀번호 설정 성공
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  isSuccess:
+                    type: boolean
+                    example: true
+                  code:
+                    type: integer
+                    example: 2000
+                  message:
+                    type: string
+                    example: "success!"
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 400
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: integer
+                    example: COMMON001
+                  message:
+                    type: string
+                    example: "Bad Request"
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 500
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: integer
+                    example: COMMON000
+                  message:
+                    type: string
+                    example: "Internal Server Error. 관리자에게 문의하세요."
+
+# [POST] 롤링페이퍼 음성 메세지 추가
+  /rcapsule/voice/{rcapsule_number}:
+    post:
+      tags:
+        - Rcapsule
+      summary: "롤링페이퍼에 음성 메세지 쓰기"
+      consumes:
+        - multipart/form-data
+      parameters:
+        - in: formData
+          name: voice_rcapsule
+          required: true
+          type: file
+          description: file to upload
+        - in: path
+          name: rcapsule_number
+          required: true
+          description: 음성 메세지를 쓰고 싶은 롤링페이퍼 고유번호
+          schema:
+            type: string
+            example: "TEST_111111"
+        - in: query
+          name: from_name
+          required: true
+          description: 작성한 사람
+          schema:
+            type: string
+            example: "nahy"
+        - in: query
+          name: content_type
+          required: true
+          schema:
+            type: string
+            example: "2"
+        - in: query
+          name: theme
+          required: true
+          schema:
+            type: string
+            example: "1"
+      responses:
+        '200':
+          description: 성공
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  isSuccess:
+                    type: boolean
+                    example: true
+                  code:
+                    type: integer
+                    example: 2000
+                  message:
+                    type: string
+                    example: "success!"
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 400
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: integer
+                    example: COMMON001
+                  message:
+                    type: string
+                    example: "Bad Request"
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 500
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: integer
+                    example: COMMON000
+                  message:
+                    type: string
+                    example: "Internal Server Error. 관리자에게 문의하세요."
+
+              
+
+
+
